Code/demo/generated/PascalIINoRelationParser.cpp

// Generated from PascalIINoRelationParser.g4 by ANTLR 4.13.2


#include "PascalIINoRelationParserListener.h"
#include "PascalIINoRelationParserVisitor.h"

#include "PascalIINoRelationParser.h"


using namespace antlrcpp;
using namespace antlrcpptest;

using namespace antlr4;

namespace {

struct PascalIINoRelationParserStaticData final {
  PascalIINoRelationParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  PascalIINoRelationParserStaticData(const PascalIINoRelationParserStaticData&) = delete;
  PascalIINoRelationParserStaticData(PascalIINoRelationParserStaticData&&) = delete;
  PascalIINoRelationParserStaticData& operator=(const PascalIINoRelationParserStaticData&) = delete;
  PascalIINoRelationParserStaticData& operator=(PascalIINoRelationParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag pascaliinorelationparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<PascalIINoRelationParserStaticData> pascaliinorelationparserParserStaticData = nullptr;

void pascaliinorelationparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (pascaliinorelationparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(pascaliinorelationparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<PascalIINoRelationParserStaticData>(
    std::vector<std::string>{
      "program", "type", "operator", "singleoperator", "arrayaccess", "expression", 
      "statement", "objectaccess", "pointeraccess", "addressof", "classdefinition", 
      "pointerassignment", "assignment", "parameter", "functioncall", "variabledefinition", 
      "objectdefinition", "pointerdefinition", "parametersdefinition", "functiondefinition", 
      "ifstatement", "forstatement", "writestatement", "readstatement", 
      "definition", "returnstatement", "charliteral", "cstring"
    },
    std::vector<std::string>{
      "", "'_'", "'+'", "'-'", "'/'", "'*'", "'%'", "'<-'", "'<'", "'>'", 
      "'='", "'|'", "'&'", "'!'", "", "", "'$'", "", "", "", "", "", "'\\n'", 
      "", "'['", "']'", "'{'", "'}'", "'.'", "'\\'", "':'", "'''", "'\"'", 
      "','", "'for'", "'write'", "'read'", "'if'", "'return'", "'class'", 
      "'char'", "'int'", "'void'", "'float'", "'bool'"
    },
    std::vector<std::string>{
      "", "UNDERSCORE", "PLUS", "MINUS", "DIVIDE", "STAR", "MODULO", "SIGNATURE", 
      "LESSTHAN", "GREATERTHAN", "EQUAL", "OR", "AMPERSAND", "NOT", "MULTICOMMENT", 
      "COMMENT", "REFERENCE", "FLOAT", "INTEGER", "BOOLEAN", "CHAR", "CSTRING", 
      "NEWLINE", "WHITESPACE", "LBRACKET", "RBRACKET", "LCURLY", "RCURLY", 
      "ACCESSOR", "ESCAPE", "COLON", "SINGLEQUOTE", "DOUBLEQUOTE", "COMMA", 
      "FOR", "WRITE", "READ", "IF", "RETURN", "CLASSID", "CHARACTERID", 
      "INTID", "VOIDTYPE", "FLOATID", "BOOLEANID", "IDENTIFIER"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  pascaliinorelationparserParserStaticData = std::move(staticData);
}

}

PascalIINoRelationParser::PascalIINoRelationParser(TokenStream *input) : PascalIINoRelationParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

PascalIINoRelationParser::PascalIINoRelationParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  PascalIINoRelationParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *pascaliinorelationparserParserStaticData->atn, pascaliinorelationparserParserStaticData->decisionToDFA, pascaliinorelationparserParserStaticData->sharedContextCache, options);
}

PascalIINoRelationParser::~PascalIINoRelationParser() {
  delete _interpreter;
}

const atn::ATN& PascalIINoRelationParser::getATN() const {
  return *pascaliinorelationparserParserStaticData->atn;
}

std::string PascalIINoRelationParser::getGrammarFileName() const {
  return "PascalIINoRelationParser.g4";
}

const std::vector<std::string>& PascalIINoRelationParser::getRuleNames() const {
  return pascaliinorelationparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& PascalIINoRelationParser::getVocabulary() const {
  return pascaliinorelationparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView PascalIINoRelationParser::getSerializedATN() const {
  return pascaliinorelationparserParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

PascalIINoRelationParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PascalIINoRelationParser::StatementContext *> PascalIINoRelationParser::ProgramContext::statement() {
  return getRuleContexts<PascalIINoRelationParser::StatementContext>();
}

PascalIINoRelationParser::StatementContext* PascalIINoRelationParser::ProgramContext::statement(size_t i) {
  return getRuleContext<PascalIINoRelationParser::StatementContext>(i);
}


size_t PascalIINoRelationParser::ProgramContext::getRuleIndex() const {
  return PascalIINoRelationParser::RuleProgram;
}

void PascalIINoRelationParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalIINoRelationParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void PascalIINoRelationParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalIINoRelationParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any PascalIINoRelationParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalIINoRelationParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

PascalIINoRelationParser::ProgramContext* PascalIINoRelationParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, PascalIINoRelationParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(56);
      statement();
      setState(59); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 70093866336258) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

PascalIINoRelationParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PascalIINoRelationParser::TypeContext::CHARACTERID() {
  return getToken(PascalIINoRelationParser::CHARACTERID, 0);
}

tree::TerminalNode* PascalIINoRelationParser::TypeContext::INTID() {
  return getToken(PascalIINoRelationParser::INTID, 0);
}

tree::TerminalNode* PascalIINoRelationParser::TypeContext::VOIDTYPE() {
  return getToken(PascalIINoRelationParser::VOIDTYPE, 0);
}

tree::TerminalNode* PascalIINoRelationParser::TypeContext::FLOATID() {
  return getToken(PascalIINoRelationParser::FLOATID, 0);
}

tree::TerminalNode* PascalIINoRelationParser::TypeContext::BOOLEANID() {
  return getToken(PascalIINoRelationParser::BOOLEANID, 0);
}


size_t PascalIINoRelationParser::TypeContext::getRuleIndex() const {
  return PascalIINoRelationParser::RuleType;
}

void PascalIINoRelationParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalIINoRelationParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void PascalIINoRelationParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalIINoRelationParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}


std::any PascalIINoRelationParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalIINoRelationParserVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

PascalIINoRelationParser::TypeContext* PascalIINoRelationParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 2, PascalIINoRelationParser::RuleType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 34084860461056) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OperatorContext ------------------------------------------------------------------

PascalIINoRelationParser::OperatorContext::OperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PascalIINoRelationParser::OperatorContext::PLUS() {
  return getToken(PascalIINoRelationParser::PLUS, 0);
}

tree::TerminalNode* PascalIINoRelationParser::OperatorContext::MINUS() {
  return getToken(PascalIINoRelationParser::MINUS, 0);
}

tree::TerminalNode* PascalIINoRelationParser::OperatorContext::DIVIDE() {
  return getToken(PascalIINoRelationParser::DIVIDE, 0);
}

tree::TerminalNode* PascalIINoRelationParser::OperatorContext::STAR() {
  return getToken(PascalIINoRelationParser::STAR, 0);
}

tree::TerminalNode* PascalIINoRelationParser::OperatorContext::MODULO() {
  return getToken(PascalIINoRelationParser::MODULO, 0);
}

tree::TerminalNode* PascalIINoRelationParser::OperatorContext::LESSTHAN() {
  return getToken(PascalIINoRelationParser::LESSTHAN, 0);
}

tree::TerminalNode* PascalIINoRelationParser::OperatorContext::GREATERTHAN() {
  return getToken(PascalIINoRelationParser::GREATERTHAN, 0);
}

std::vector<tree::TerminalNode *> PascalIINoRelationParser::OperatorContext::EQUAL() {
  return getTokens(PascalIINoRelationParser::EQUAL);
}

tree::TerminalNode* PascalIINoRelationParser::OperatorContext::EQUAL(size_t i) {
  return getToken(PascalIINoRelationParser::EQUAL, i);
}

std::vector<tree::TerminalNode *> PascalIINoRelationParser::OperatorContext::OR() {
  return getTokens(PascalIINoRelationParser::OR);
}

tree::TerminalNode* PascalIINoRelationParser::OperatorContext::OR(size_t i) {
  return getToken(PascalIINoRelationParser::OR, i);
}

std::vector<tree::TerminalNode *> PascalIINoRelationParser::OperatorContext::AMPERSAND() {
  return getTokens(PascalIINoRelationParser::AMPERSAND);
}

tree::TerminalNode* PascalIINoRelationParser::OperatorContext::AMPERSAND(size_t i) {
  return getToken(PascalIINoRelationParser::AMPERSAND, i);
}


size_t PascalIINoRelationParser::OperatorContext::getRuleIndex() const {
  return PascalIINoRelationParser::RuleOperator;
}

void PascalIINoRelationParser::OperatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalIINoRelationParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOperator(this);
}

void PascalIINoRelationParser::OperatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalIINoRelationParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOperator(this);
}


std::any PascalIINoRelationParser::OperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalIINoRelationParserVisitor*>(visitor))
    return parserVisitor->visitOperator(this);
  else
    return visitor->visitChildren(this);
}

PascalIINoRelationParser::OperatorContext* PascalIINoRelationParser::operator_() {
  OperatorContext *_localctx = _tracker.createInstance<OperatorContext>(_ctx, getState());
  enterRule(_localctx, 4, PascalIINoRelationParser::RuleOperator);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PascalIINoRelationParser::PLUS: {
        enterOuterAlt(_localctx, 1);
        setState(63);
        match(PascalIINoRelationParser::PLUS);
        break;
      }

      case PascalIINoRelationParser::MINUS: {
        enterOuterAlt(_localctx, 2);
        setState(64);
        match(PascalIINoRelationParser::MINUS);
        break;
      }

      case PascalIINoRelationParser::DIVIDE: {
        enterOuterAlt(_localctx, 3);
        setState(65);
        match(PascalIINoRelationParser::DIVIDE);
        break;
      }

      case PascalIINoRelationParser::STAR: {
        enterOuterAlt(_localctx, 4);
        setState(66);
        match(PascalIINoRelationParser::STAR);
        break;
      }

      case PascalIINoRelationParser::MODULO: {
        enterOuterAlt(_localctx, 5);
        setState(67);
        match(PascalIINoRelationParser::MODULO);
        break;
      }

      case PascalIINoRelationParser::LESSTHAN: {
        enterOuterAlt(_localctx, 6);
        setState(68);
        match(PascalIINoRelationParser::LESSTHAN);
        break;
      }

      case PascalIINoRelationParser::GREATERTHAN: {
        enterOuterAlt(_localctx, 7);
        setState(69);
        match(PascalIINoRelationParser::GREATERTHAN);
        break;
      }

      case PascalIINoRelationParser::EQUAL: {
        enterOuterAlt(_localctx, 8);
        setState(70);
        match(PascalIINoRelationParser::EQUAL);
        setState(71);
        match(PascalIINoRelationParser::EQUAL);
        break;
      }

      case PascalIINoRelationParser::OR: {
        enterOuterAlt(_localctx, 9);
        setState(72);
        match(PascalIINoRelationParser::OR);
        setState(73);
        match(PascalIINoRelationParser::OR);
        break;
      }

      case PascalIINoRelationParser::AMPERSAND: {
        enterOuterAlt(_localctx, 10);
        setState(74);
        match(PascalIINoRelationParser::AMPERSAND);
        setState(75);
        match(PascalIINoRelationParser::AMPERSAND);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SingleoperatorContext ------------------------------------------------------------------

PascalIINoRelationParser::SingleoperatorContext::SingleoperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PascalIINoRelationParser::SingleoperatorContext::MINUS() {
  return getToken(PascalIINoRelationParser::MINUS, 0);
}

tree::TerminalNode* PascalIINoRelationParser::SingleoperatorContext::NOT() {
  return getToken(PascalIINoRelationParser::NOT, 0);
}


size_t PascalIINoRelationParser::SingleoperatorContext::getRuleIndex() const {
  return PascalIINoRelationParser::RuleSingleoperator;
}

void PascalIINoRelationParser::SingleoperatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalIINoRelationParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSingleoperator(this);
}

void PascalIINoRelationParser::SingleoperatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalIINoRelationParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSingleoperator(this);
}


std::any PascalIINoRelationParser::SingleoperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalIINoRelationParserVisitor*>(visitor))
    return parserVisitor->visitSingleoperator(this);
  else
    return visitor->visitChildren(this);
}

PascalIINoRelationParser::SingleoperatorContext* PascalIINoRelationParser::singleoperator() {
  SingleoperatorContext *_localctx = _tracker.createInstance<SingleoperatorContext>(_ctx, getState());
  enterRule(_localctx, 6, PascalIINoRelationParser::RuleSingleoperator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    _la = _input->LA(1);
    if (!(_la == PascalIINoRelationParser::MINUS

    || _la == PascalIINoRelationParser::NOT)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayaccessContext ------------------------------------------------------------------

PascalIINoRelationParser::ArrayaccessContext::ArrayaccessContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PascalIINoRelationParser::ArrayaccessContext::IDENTIFIER() {
  return getToken(PascalIINoRelationParser::IDENTIFIER, 0);
}

tree::TerminalNode* PascalIINoRelationParser::ArrayaccessContext::LBRACKET() {
  return getToken(PascalIINoRelationParser::LBRACKET, 0);
}

PascalIINoRelationParser::ExpressionContext* PascalIINoRelationParser::ArrayaccessContext::expression() {
  return getRuleContext<PascalIINoRelationParser::ExpressionContext>(0);
}

tree::TerminalNode* PascalIINoRelationParser::ArrayaccessContext::RBRACKET() {
  return getToken(PascalIINoRelationParser::RBRACKET, 0);
}


size_t PascalIINoRelationParser::ArrayaccessContext::getRuleIndex() const {
  return PascalIINoRelationParser::RuleArrayaccess;
}

void PascalIINoRelationParser::ArrayaccessContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalIINoRelationParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArrayaccess(this);
}

void PascalIINoRelationParser::ArrayaccessContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalIINoRelationParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArrayaccess(this);
}


std::any PascalIINoRelationParser::ArrayaccessContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalIINoRelationParserVisitor*>(visitor))
    return parserVisitor->visitArrayaccess(this);
  else
    return visitor->visitChildren(this);
}

PascalIINoRelationParser::ArrayaccessContext* PascalIINoRelationParser::arrayaccess() {
  ArrayaccessContext *_localctx = _tracker.createInstance<ArrayaccessContext>(_ctx, getState());
  enterRule(_localctx, 8, PascalIINoRelationParser::RuleArrayaccess);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    match(PascalIINoRelationParser::IDENTIFIER);
    setState(81);
    match(PascalIINoRelationParser::LBRACKET);
    setState(82);
    expression(0);
    setState(83);
    match(PascalIINoRelationParser::RBRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

PascalIINoRelationParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PascalIINoRelationParser::ExpressionContext::IDENTIFIER() {
  return getToken(PascalIINoRelationParser::IDENTIFIER, 0);
}

tree::TerminalNode* PascalIINoRelationParser::ExpressionContext::FLOAT() {
  return getToken(PascalIINoRelationParser::FLOAT, 0);
}

tree::TerminalNode* PascalIINoRelationParser::ExpressionContext::INTEGER() {
  return getToken(PascalIINoRelationParser::INTEGER, 0);
}

tree::TerminalNode* PascalIINoRelationParser::ExpressionContext::BOOLEAN() {
  return getToken(PascalIINoRelationParser::BOOLEAN, 0);
}

tree::TerminalNode* PascalIINoRelationParser::ExpressionContext::CHAR() {
  return getToken(PascalIINoRelationParser::CHAR, 0);
}

tree::TerminalNode* PascalIINoRelationParser::ExpressionContext::VOIDTYPE() {
  return getToken(PascalIINoRelationParser::VOIDTYPE, 0);
}

PascalIINoRelationParser::CstringContext* PascalIINoRelationParser::ExpressionContext::cstring() {
  return getRuleContext<PascalIINoRelationParser::CstringContext>(0);
}

tree::TerminalNode* PascalIINoRelationParser::ExpressionContext::NOT() {
  return getToken(PascalIINoRelationParser::NOT, 0);
}

std::vector<PascalIINoRelationParser::ExpressionContext *> PascalIINoRelationParser::ExpressionContext::expression() {
  return getRuleContexts<PascalIINoRelationParser::ExpressionContext>();
}

PascalIINoRelationParser::ExpressionContext* PascalIINoRelationParser::ExpressionContext::expression(size_t i) {
  return getRuleContext<PascalIINoRelationParser::ExpressionContext>(i);
}

PascalIINoRelationParser::ObjectaccessContext* PascalIINoRelationParser::ExpressionContext::objectaccess() {
  return getRuleContext<PascalIINoRelationParser::ObjectaccessContext>(0);
}

PascalIINoRelationParser::FunctioncallContext* PascalIINoRelationParser::ExpressionContext::functioncall() {
  return getRuleContext<PascalIINoRelationParser::FunctioncallContext>(0);
}

PascalIINoRelationParser::AddressofContext* PascalIINoRelationParser::ExpressionContext::addressof() {
  return getRuleContext<PascalIINoRelationParser::AddressofContext>(0);
}

PascalIINoRelationParser::PointeraccessContext* PascalIINoRelationParser::ExpressionContext::pointeraccess() {
  return getRuleContext<PascalIINoRelationParser::PointeraccessContext>(0);
}

PascalIINoRelationParser::SingleoperatorContext* PascalIINoRelationParser::ExpressionContext::singleoperator() {
  return getRuleContext<PascalIINoRelationParser::SingleoperatorContext>(0);
}

PascalIINoRelationParser::ArrayaccessContext* PascalIINoRelationParser::ExpressionContext::arrayaccess() {
  return getRuleContext<PascalIINoRelationParser::ArrayaccessContext>(0);
}

PascalIINoRelationParser::OperatorContext* PascalIINoRelationParser::ExpressionContext::operator_() {
  return getRuleContext<PascalIINoRelationParser::OperatorContext>(0);
}


size_t PascalIINoRelationParser::ExpressionContext::getRuleIndex() const {
  return PascalIINoRelationParser::RuleExpression;
}

void PascalIINoRelationParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalIINoRelationParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void PascalIINoRelationParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PascalIINoRelationParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}


std::any PascalIINoRelationParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PascalIINoRelationParserVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}


PascalIINoRelationParser::ExpressionContext* PascalIINoRelationParser::expression() {
   return expression(0);
}

PascalIINoRelationParser::ExpressionContext* PascalIINoRelationParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  PascalIINoRelationParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  PascalIINoRelationParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 10;
  enterRecursionRule(_localctx, 10, PascalIINoRelationParser::RuleExpression, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(103);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      setState(86);
      match(PascalIINoRelationParser::IDENTIFIER);
      break;
    }

    case 2: {
      setState(87);
      match(PascalIINoRelationParser::FLOAT);
      break;
    }

    case 3: {
      setState(88);
      match(PascalIINoRelationParser::INTEGER);
      break;
    }

    case 4: {
      setState(89);
      match(PascalIINoRelationParser::BOOLEAN);
      break;
    }

    case 5: {
      setState(90);
      match(PascalIINoRelationParser::CHAR);
      break;
    }

    case 6: {
      setState(91);
      match(PascalIINoRelationParser::VOIDTYPE);
      break;
    }

    case 7: {
      setState(92);
      cstring();
      break;
    }

    case 8: {
      setState(93);
      match(PascalIINoRelationParser::NOT);
      setState(94);
      expression(7);
      break;
    }

    case 9: {
      setState(95);
      objectaccess();
      break;
    }

    case 10: {
      setState(96);
      functioncall();
      break;
    }

    case 11: {
      setState(97);
      addressof();
      break;
    }

    case 12: {
      setState(98);
      pointeraccess();
      break;
    }

    case 13: {
      setState(99);
      singleoperator();
      setState(100);
      expression(2);
      break;
    }

    case 14: {
      setState(102);
      arrayaccess();
      break;
    }
